--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "tmp": "0.0.33"
   },
   "devDependencies": {
-    "fuse-box": "^2.5.0-beta.1",
+    "fuse-box": "^3.0.0-next.25",
     "typescript": "^2.6.1"
   }
 }
