--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsc --declaration"
+    "prepare": "tsc --declaration"
   },
   "repository": {
     "type": "git",
