--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@types/node": "^8.0.53",
     "@types/tmp": "0.0.33",
+    "cross-spawn": "^5.1.0",
     "tmp": "0.0.33"
   },
   "devDependencies": {
