--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "@types/node": "^8.0.53",
     "@types/tmp": "0.0.33",
     "cross-spawn": "^5.1.0",
+    "find-elm-dependencies": "^1.0.2",
     "tmp": "0.0.33"
   },
   "devDependencies": {
-    "fuse-box": "^3.0.0-next.25",
+    "fuse-box": "^3.0.0-next.32",
     "typescript": "^2.6.1"
   }
 }
