--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
   },
   "homepage": "https://github.com/ccapndave/fuse-box-elm-plugin#readme",
   "dependencies": {
-    "@types/node": "^8.0.53",
+    "@types/node": "^10.12.12",
     "@types/tmp": "0.0.33",
-    "cross-spawn": "^5.1.0",
-    "find-elm-dependencies": "^1.0.2",
+    "cross-spawn": "^6.0.5",
+    "find-elm-dependencies": "^2.0.0",
     "tmp": "0.0.33"
   },
   "devDependencies": {
-    "fuse-box": "^3.0.0-next.32",
-    "typescript": "^2.6.1"
+    "fuse-box": "^3.6.0",
+    "typescript": "^3.2.2"
   }
 }
